# beans

./: CMakeLists.txt  README.md
examples/: example1.cpp
examples/example1/include/: BigClass.hpp  FooBar.hpp
examples/example1/src/: main.cpp
examples/example2/include/: calculator.hpp
examples/example2/src/: main.cpp
examples/example2/test/: test_calculator.cpp
include/: beans.hpp
src/: beans.cpp
